updated recipe links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <nav>
+        <a href="./recipes/lasagna.html">Lasagna</a> | 
+        <a href="./recipes/colorado-green-chili.html"> Colorado Green Chili</a> | 
+        <a href="./recipes/plb-pie.html">Preserved Lemon Blueberry Pie</a>
+    </nav>
 </body>
 </html>
