updated linking between pages on varios recipes

--- a/recipes/colorado-green-chili.html
+++ b/recipes/colorado-green-chili.html
@@ -9,7 +9,7 @@
     <nav>
         <a href="../index.html">Home</a> | 
         <a href="./lasagna.html">Lasagna</a> | 
-        <a href=""></a>
+        <a href="./plb-pie.html">Preserved Lemon Blueberry Pie</a>
     </nav>
     <h1>Colorado Green Chilli</h1>
     <img src="../images/chili.png" alt="An image of chili." height="750" width="750">
