--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,9 +8,8 @@
 <body>
     <nav>
         <a href="../index.html">Home</a> | 
-        <a href=""></a> | 
-        <a href=""></a> | 
-        <a href=""></a>
+        <a href="./colorado-green-chili.html">Colorado Green Chili</a> | 
+        <a href="./plb-pie.html">Preserved Lemon Blueberry Pie</a>
     </nav>
     <h1>World's Best Lasagna</h1>
     <img src="../images/lasagna.png" alt="An image of lasagna." height="550" width="750">
