--- a/recipes/colorado-green-chili.html
+++ b/recipes/colorado-green-chili.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes | Colorado Green Chili</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <nav>
@@ -14,29 +15,37 @@
     <h1>Colorado Green Chilli</h1>
     <img src="../images/chili.png" alt="An image of chili." height="750" width="750">
     <h2>Description</h2>
-    <p>This is a vegetarian green chili that you find all over Colorado. Goes great over breakfast burritos, cheeseburgers, fried eggs, or anything.</p>
+    <div>
+        <p>This is a vegetarian green chili that you find all over Colorado. Goes great over breakfast burritos, cheeseburgers, fried eggs, or anything.</p>
+    </div>
     <h2>Ingredients</h2>
-    <ul>
-        <li>1 pound Hatch chile peppers</li>
-        <li>1 tablespoon olive oil</li>
-        <li>1 large onion, chopped</li>
-        <li>4 cloves garlic, minced, or more to taste</li>
-        <li>1 (14.5 ounce) can diced tomatoes</li>
-        <li>1 tablespoon all-purpose flour</li>
-        <li>5 cups vegetable broth</li>
-        <li>2 tablespoons ground cumin</li>
-        <li>2 tablespoons chili powder, or to taste</li>
-        <li>1 teaspoon salt</li>
-    </ul>
+    <div>
+        <ul>
+            <li>1 pound Hatch chile peppers</li>
+            <li>1 tablespoon olive oil</li>
+            <li>1 large onion, chopped</li>
+            <li>4 cloves garlic, minced, or more to taste</li>
+            <li>1 (14.5 ounce) can diced tomatoes</li>
+            <li>1 tablespoon all-purpose flour</li>
+            <li>5 cups vegetable broth</li>
+            <li>2 tablespoons ground cumin</li>
+            <li>2 tablespoons chili powder, or to taste</li>
+            <li>1 teaspoon salt</li>
+        </ul>
+    </div>
     <h2>Steps</h2>
-    <ol>
-        <li>Set oven rack about 6 inches from the heat source and preheat the oven's broiler.</li>
-        <li>Line a baking sheet with aluminum foil; spread Hatch chile peppers on top.</li>
-        <li>Cook under the preheated broiler, turning once, until the skin of the peppers has blackened and blistered, 6 to 8 minutes. Transfer to a bowl and seal tightly with plastic wrap. Let cool, about 20 minutes. Peel and seed peppers; dice flesh.</li>
-        <li>Heat olive oil in a large pot over medium heat. Add onion and garlic; cook and stir until softened, about 5 minutes. Stir in diced chile peppers and tomatoes. Cook until heated through, about 5 minutes. Sprinkle flour into the pot.</li>
-        <li>Pour broth into the pot; add cumin, chili powder, and salt. Bring to a boil; reduce heat and simmer until flavors combine, at least 30 minutes.</li>
-    </ol>
+    <div>
+        <ol>
+            <li>Set oven rack about 6 inches from the heat source and preheat the oven's broiler.</li>
+            <li>Line a baking sheet with aluminum foil; spread Hatch chile peppers on top.</li>
+            <li>Cook under the preheated broiler, turning once, until the skin of the peppers has blackened and blistered, 6 to 8 minutes. Transfer to a bowl and seal tightly with plastic wrap. Let cool, about 20 minutes. Peel and seed peppers; dice flesh.</li>
+            <li>Heat olive oil in a large pot over medium heat. Add onion and garlic; cook and stir until softened, about 5 minutes. Stir in diced chile peppers and tomatoes. Cook until heated through, about 5 minutes. Sprinkle flour into the pot.</li>
+            <li>Pour broth into the pot; add cumin, chili powder, and salt. Bring to a boil; reduce heat and simmer until flavors combine, at least 30 minutes.</li>
+        </ol>
+    </div>
     <h2>Cook's Note</h2>
-    <p>Substitute chicken broth for the vegetable broth if desired. Use fresh or frozen chiles shipped from someplace like The Chili Guys. I personally use either Hot Hatch or Pueblo Hot. I also dump in the oil from the bags to add a little extra depth and heat.</p>
+    <div>
+        <p>Substitute chicken broth for the vegetable broth if desired. Use fresh or frozen chiles shipped from someplace like The Chili Guys. I personally use either Hot Hatch or Pueblo Hot. I also dump in the oil from the bags to add a little extra depth and heat.</p>
+    </div>
 </body>
 </html>
