--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <nav>
-        <a href="./recipes/lasagna.html">Lasagna</a> | 
-        <a href="./recipes/colorado-green-chili.html"> Colorado Green Chili</a> | 
-        <a href="./recipes/plb-pie.html">Preserved Lemon Blueberry Pie</a>
-    </nav>
+    <div class="home">
+        <nav class="index-nav">
+            <a href="./recipes/lasagna.html">Lasagna</a> | 
+            <a href="./recipes/colorado-green-chili.html"> Colorado Green Chili</a> | 
+            <a href="./recipes/plb-pie.html">Preserved Lemon Blueberry Pie</a>
+        </nav>
+        <h1>Odin Recipes</h1>
+        <br>
+        <br>
+        <a href="./recipes/lasagna.html"><img src="./images/lasagna.png" alt="Lasagna" class="index-img"></a>
+        <a href="./recipes/colorado-green-chili.html"><img src="./images/chili.png" alt="Chili" class="index-img"></a>
+        <a href="./recipes/plb-pie.html"><img src="./images/pie.png" alt="Pie" class="index-img"></a>
+    </div>
 </body>
 </html>
