--- a/recipes/plb-pie.html
+++ b/recipes/plb-pie.html
@@ -7,48 +7,58 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav>
-        <a href="../index.html">Home</a> | 
-        <a href="./lasagna.html">Lasagna</a> | 
-        <a href="./colorado-green-chili.html">Colorado Green Chili</a>
-    </nav>
-    <h1>Preserved Lemon Blueberry Pie</h1>
-    <img src="../images/pie.png" alt="An image of lemon blueberry pie.">
-    <h2>Description</h2>
-    <div>
-        <p>I love blueberry pie, but sometimes it can taste a little ...monochromatic. Here, lemon zest, lemon juice, and diced preserved lemon add a burst of bright flavor to every bite.</p>
-    </div>
-    <h2>Ingredients</h2>
-    <div>
-        <ul>
-            <li>Pastry for a 9-inch double-crust pie, chilled</li>
-            <li>Flour for dusting, as needed</li>
-            <li>6 cups fresh blueberries</li>
-            <li>3/4 cup sugar</li>
-            <li>2 tablespoons tapioca starch</li>
-            <li>1 tablespoon cornstarch</li>
-            <li>1 tablespoon lemon zest (from an organic lemon)</li>
-            <li>2 tablespoons fresh lemon juice</li>
-            <li>1/4 cup preserved lemon, rinsed and finely diced</li>
-        </ul>
-    </div>
-    <h2>Steps</h2>
-    <div>
-        <ol>
-            <li>On a lightly floured work surface, roll out half of the pie dough to fit a 9-inch pie dish. Gently fit it into the pan and trim edge to a 1/2-inch overhang. Cover with plastic wrap and refrigerate for at least 30 minutes.</li>
-            <li>Roll out remaining dough into a circle and transfer to a sheet of parchment, baking sheet, or flat surface. Use a pastry wheel to cut into 1/2-inch strips. Cover with plastic wrap and refrigerate while you prepare the filling.</li>
-            <li>Rinse and pick over blueberries to remove any stems; set aside. Combine sugar, tapioca starch, and cornstarch in a bowl and mix well (see Note). Add lemon juice, lemon zest, and diced preserved lemon. Toss blueberries with the sugar mixture.</li>
-            <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
-            <li>Pour blueberry filling into chilled pie crust.</li>
-            <li>Lay two strips of pastry over the filled pie in an X shape. Continue adding strips, alternating over-and-under, for the lattice pattern.</li>
-            <li>Trim the lattice strips to a half-inch overhang, tuck them under the bottom crust, and crimp the edge to seal. Place the pie dish on a rimmed baking sheet to catch any drips.</li>
-            <li>Bake in the preheated oven for 25 minutes, or until the edges of the crust are golden brown. Reduce the temperature to 350 degrees F (175 degrees C). Loosely cover the pie with foil to prevent over-browning. Continue baking until the juices are bubbling and the crust is a rich golden brown, about an hour more. The internal temperature of the pie should be 200 degrees F (93°C) on an instant-read thermometer.</li>
-            <li>Cool pie on a wire rack for 4 hours to allow filing to set fully.</li>
-        </ol>
-    </div>
-    <h2>Cook's Note</h2>
-    <div>
-        <p>You can use 3 tablespoons of cornstarch in place of the tapioca starch-cornstarch combo. The tapioca makes it a little softer, while the filling will be more strongly set if you use cornstarch alone.</p>
+    <div class="pie">
+        <nav>
+            <a href="../index.html">Home</a> | 
+            <a href="./lasagna.html">Lasagna</a> | 
+            <a href="./colorado-green-chili.html">Colorado Green Chili</a>
+        </nav>
+        <h1>Preserved Lemon Blueberry Pie</h1>
+        <img src="../images/pie.png" alt="An image of lemon blueberry pie.">
+        <div class="description">
+            <h2>Description</h2>
+            <p>I love blueberry pie, but sometimes it can taste a little ...monochromatic. Here, lemon zest, lemon juice, and diced preserved lemon add a burst of bright flavor to every bite.</p>
+        </div>
+        <div class="container">
+            <div class="box">
+                <h2>Ingredients</h2>
+                <div>
+                    <ul>
+                        <li>Pastry for a 9-inch double-crust pie, chilled</li>
+                        <li>Flour for dusting, as needed</li>
+                        <li>6 cups fresh blueberries</li>
+                        <li>3/4 cup sugar</li>
+                        <li>2 tablespoons tapioca starch</li>
+                        <li>1 tablespoon cornstarch</li>
+                        <li>1 tablespoon lemon zest (from an organic lemon)</li>
+                        <li>2 tablespoons fresh lemon juice</li>
+                        <li>1/4 cup preserved lemon, rinsed and finely diced</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box">
+                <h2>Steps</h2>
+                <div>
+                    <ol>
+                        <li>On a lightly floured work surface, roll out half of the pie dough to fit a 9-inch pie dish. Gently fit it into the pan and trim edge to a 1/2-inch overhang. Cover with plastic wrap and refrigerate for at least 30 minutes.</li>
+                        <li>Roll out remaining dough into a circle and transfer to a sheet of parchment, baking sheet, or flat surface. Use a pastry wheel to cut into 1/2-inch strips. Cover with plastic wrap and refrigerate while you prepare the filling.</li>
+                        <li>Rinse and pick over blueberries to remove any stems; set aside. Combine sugar, tapioca starch, and cornstarch in a bowl and mix well (see Note). Add lemon juice, lemon zest, and diced preserved lemon. Toss blueberries with the sugar mixture.</li>
+                        <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
+                        <li>Pour blueberry filling into chilled pie crust.</li>
+                        <li>Lay two strips of pastry over the filled pie in an X shape. Continue adding strips, alternating over-and-under, for the lattice pattern.</li>
+                        <li>Trim the lattice strips to a half-inch overhang, tuck them under the bottom crust, and crimp the edge to seal. Place the pie dish on a rimmed baking sheet to catch any drips.</li>
+                        <li>Bake in the preheated oven for 25 minutes, or until the edges of the crust are golden brown. Reduce the temperature to 350 degrees F (175 degrees C). Loosely cover the pie with foil to prevent over-browning. Continue baking until the juices are bubbling and the crust is a rich golden brown, about an hour more. The internal temperature of the pie should be 200 degrees F (93°C) on an instant-read thermometer.</li>
+                        <li>Cool pie on a wire rack for 4 hours to allow filing to set fully.</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="box">
+                <h2>Cook's Note</h2>
+                <div>
+                    <p>You can use 3 tablespoons of cornstarch in place of the tapioca starch-cornstarch combo. The tapioca makes it a little softer, while the filling will be more strongly set if you use cornstarch alone.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
